<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_meeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueish_white"
    android:focusableInTouchMode="true"
    tools:context=".ui.create.CreateNewMeetingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_create"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            app:theme="@style/Theme.MaReu.AppBarOverlay"
            app:title="Nouvelle réunion" />
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/create_nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbarlayout_create"
        tools:context=".ui.create.CreateMeetingFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Meeting date picker buttons -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/date_picker_btn_create"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/colorPrimaryVariantTransparency"
                android:text="@string/date_picker_btn"
                android:textColor="#01579B"
                app:icon="@drawable/ic_baseline_calendar_month_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/selected_day_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/create_gray_text_color"
                app:layout_constraintBottom_toBottomOf="@+id/date_picker_btn_create"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/date_picker_btn_create"
                app:layout_constraintTop_toTopOf="@+id/date_picker_btn_create"
                tools:text="21/12/2022" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/starting_time_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/time_start_btn_create"
                android:textColor="@color/create_meeting_btn_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_picker_btn_create" />

            <TextView
                android:id="@+id/selected_time_start_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/create_gray_text_color"
                app:layout_constraintBottom_toBottomOf="@+id/starting_time_btn"
                app:layout_constraintStart_toEndOf="@+id/starting_time_btn"
                app:layout_constraintStart_toStartOf="@+id/selected_day_tv"
                app:layout_constraintTop_toTopOf="@+id/starting_time_btn"
                tools:text="16h00" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ending_time_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/time_end_btn_create"
                android:textColor="@color/create_meeting_btn_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/starting_time_btn" />

            <TextView
                android:id="@+id/selected_time_end_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/create_gray_text_color"
                app:layout_constraintBottom_toBottomOf="@+id/ending_time_btn"
                app:layout_constraintStart_toEndOf="@+id/ending_time_btn"
                app:layout_constraintStart_toStartOf="@+id/selected_time_start_tv"
                app:layout_constraintTop_toTopOf="@+id/ending_time_btn"
                tools:text="16h00" />

            <ImageView
                android:id="@+id/tv_time_end_error_icon_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/warning_time_end_symbol"
                android:src="@drawable/baseline_warning_24"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/selected_time_end_tv"
                app:layout_constraintEnd_toStartOf="@id/selected_time_end_tv"
                app:layout_constraintTop_toTopOf="@id/selected_time_end_tv" />

            <!-- Meeting room AutocompleteTextView -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/room_dropdown_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="1dp"
                android:hint="@string/room_actv_layout_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ending_time_btn">

                <AutoCompleteTextView
                    android:id="@+id/rooms_actv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:labelFor="@+id/rooms_actv"
                    android:textColorHint="@color/create_gray_text_color"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Meeting title text input-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_inputlayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/room_dropdown_layout"
                app:startIconDrawable="@drawable/ic_baseline_assignment_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_textinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/meeting_title_et_hint"
                    android:inputType="textCapSentences"
                    android:textColorHint="@color/create_gray_text_color"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--Meeting description text input-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_object_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/description_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_inputlayout"
                app:startIconDrawable="@drawable/ic_baseline_description_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_object_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="4"
                    android:minLines="2"
                    android:textColor="@color/black"
                    android:textColorHint="@color/create_gray_text_color"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  Meeting participants input-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/participants_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/email_hint_textinput"
                app:layout_constraintEnd_toStartOf="@id/add_participant_fab"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meeting_object_layout"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/participants_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/create_gray_text_color"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_participant_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/add_fab_descr"
                android:src="@drawable/ic_baseline_add_24"
                app:backgroundTint="@color/colorPrimaryVariant"
                app:layout_constraintBottom_toBottomOf="@id/participants_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/participants_layout"
                app:layout_constraintTop_toTopOf="@id/participants_layout"
                app:tint="@color/white" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/participant_chipgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/participants_layout" />

            <!--Submit button-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_meeting_btn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/create_btn_descr"
                android:paddingStart="28dp"
                android:paddingTop="16dp"
                android:paddingEnd="28dp"
                android:paddingBottom="16dp"
                android:text="@string/create_btn"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/participant_chipgroup" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="400dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>