...
    <string name="add_fab_descr">ajouter un participant avec son email</string>
    <string name="date_picker_btn">Date</string>
    <string name="pick_room_menu">Choisissez une salle</string>
    <string name="room_actv_hint">Salle</string>
    <string name="delete_meeting_descr">Supprimer la réunion</string>
    <string name="no_meeting_toast">"Aucune réunion trouvée"</string>
    <string name="invalid_email_input">"Adresse e-mail invalide"</string>
    <string name="filter_meeting_menu_descr">Filtrer les réunions par date ou par salle</string>
    <string name="filter_meeting_descr">Filtrer les réunions</string>
    <string name="filter_by_date">Filtrer par date</string>
    <string name="filter_by_date_descr">Filtrer par date</string>
    <string name="filter_by_room">Filtrer par salle</string>
    <string name="filter_by_room_descr">Filtrer par salle</string>
...
