...
        android:id="@+id/meeting_date_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/meeting_title_tv"
        tool:text="22/12/2022" />

    <TextView
        android:id="@+id/meeting_hour_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
